update docs for lesswarnings2

--- a/lesswarnings2/libp2p/utility.html
+++ b/lesswarnings2/libp2p/utility.html
@@ -217,14 +217,14 @@ window.addEventListener("DOMContentLoaded", main2);
     title="compilesOr(a, b: untyped): untyped">compilesOr(a, b: untyped): untyped</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">exceptionToAssert
+      <li><a class="reference" href="#exceptionToAssert.t%2Cuntyped"
+    title="exceptionToAssert(body: untyped): untyped">exceptionToAssert(body: untyped): untyped</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">public
       <li><a class="reference" href="#public.t"
     title="public()">public()</a></li>
-
-  </ul>
-  <ul class="simple nested-toc-section">tryException
-      <li><a class="reference" href="#tryException.t%2Cuntyped"
-    title="tryException(body: untyped): untyped">tryException(body: untyped): untyped</a></li>
 
   </ul>
 
@@ -287,6 +287,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="exceptionToAssert.t,untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#exceptionToAssert.t%2Cuntyped"><span class="Identifier">exceptionToAssert</span></a><span class="Other">(</span><span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L69"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L69" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="public.t" class="tohide">
 <dt><pre><span class="Keyword">template</span> <a href="#public.t"><span class="Identifier">public</span></a><span class="Other">(</span><span class="Other">)</span> {.<span class="Identifier">pragma</span>.}</pre></dt>
 <dd>
@@ -296,18 +308,6 @@ class="link-seesrc" target="_blank">Source</a>
 href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L17"
 class="link-seesrc" target="_blank">Source</a>
 &nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L17" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="tryException.t,untyped" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#tryException.t%2Cuntyped"><span class="Identifier">tryException</span></a><span class="Other">(</span><span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L69"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L69" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -321,7 +321,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-04-25 16:25:38 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-04-26 15:29:39 UTC</small>
       </div>
     </div>
   </div>
