--- a/lesswarnings2/libp2p/protobuf/minprotobuf.html
+++ b/lesswarnings2/libp2p/protobuf/minprotobuf.html
@@ -921,7 +921,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../utility.html#compilesOr.t,untyped,untyped"><span class="Identifier">compilesOr</span></a>, <a href="../utility.html#shortLog,string"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#shortLog,openArray[byte]"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#public.t"><span class="Identifier">public</span></a>, <a href="../utility.html#tryException.t,untyped"><span class="Identifier">tryException</span></a>
+<a href="../utility.html#compilesOr.t,untyped,untyped"><span class="Identifier">compilesOr</span></a>, <a href="../utility.html#shortLog,string"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#shortLog,openArray[byte]"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#exceptionToAssert.t,untyped"><span class="Identifier">exceptionToAssert</span></a>, <a href="../utility.html#public.t"><span class="Identifier">public</span></a>
 </dl></div>
 
   </div>
@@ -931,7 +931,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-04-25 16:25:38 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-04-26 15:29:39 UTC</small>
       </div>
     </div>
   </div>
