update docs for lesswarnings2

--- a/lesswarnings2/libp2p/utility.html
+++ b/lesswarnings2/libp2p/utility.html
@@ -227,6 +227,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="public()">public()</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">safeConvert
+      <li><a class="reference" href="#safeConvert.t%2CS"
+    title="safeConvert[T: SomeInteger; S: Ordinal](a: S): T">safeConvert[T: SomeInteger; S: Ordinal](a: S): T</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -293,9 +298,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L69"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L75"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L69" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -311,6 +316,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="safeConvert.t,S" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#safeConvert.t%2CS"><span class="Identifier">safeConvert</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">SomeInteger</span><span class="Other">;</span> <span class="Identifier">S</span><span class="Other">:</span> <span class="Identifier">Ordinal</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <span class="Identifier">S</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L69"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L69" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 
 </dl></div>
 
@@ -321,7 +338,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-04-27 10:56:04 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-04-28 14:44:45 UTC</small>
       </div>
     </div>
   </div>
