--- a/lesswarnings2/libp2p/protobuf/minprotobuf.html
+++ b/lesswarnings2/libp2p/protobuf/minprotobuf.html
@@ -258,7 +258,7 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#SupportedWireTypes"
-    title="SupportedWireTypes = {0, 1, 2, 5}">SupportedWireTypes</a></li>
+    title="SupportedWireTypes = [0, 1, 2, 5]">SupportedWireTypes</a></li>
 
   </ul>
 </li>
@@ -562,7 +562,7 @@ class="link-seesrc" target="_blank">Source</a>
 <h1><a class="toc-backref" href="#10">Consts</a></h1>
 <dl class="item">
 <div id="SupportedWireTypes" class="tohide">
-<dt><pre><a href="minprotobuf.html#SupportedWireTypes"><span class="Identifier">SupportedWireTypes</span></a> <span class="Other">=</span> <span class="Other">{</span><span class="DecNumber">0</span><span class="Other">,</span> <span class="DecNumber">1</span><span class="Other">,</span> <span class="DecNumber">2</span><span class="Other">,</span> <span class="DecNumber">5</span><span class="Other">}</span></pre></dt>
+<dt><pre><a href="minprotobuf.html#SupportedWireTypes"><span class="Identifier">SupportedWireTypes</span></a> <span class="Other">=</span> <span class="Other">[</span><span class="DecNumber">0</span><span class="Other">,</span> <span class="DecNumber">1</span><span class="Other">,</span> <span class="DecNumber">2</span><span class="Other">,</span> <span class="DecNumber">5</span><span class="Other">]</span></pre></dt>
 <dd>
 
 
@@ -931,7 +931,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-02 12:07:12 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-04 15:39:05 UTC</small>
       </div>
     </div>
   </div>
