--- a/lesswarnings2/libp2p/utility.html
+++ b/lesswarnings2/libp2p/utility.html
@@ -229,7 +229,7 @@ window.addEventListener("DOMContentLoaded", main2);
   </ul>
   <ul class="simple nested-toc-section">safeConvert
       <li><a class="reference" href="#safeConvert.t%2CS"
-    title="safeConvert[T: SomeInteger; S: Ordinal](a: S): T">safeConvert[T: SomeInteger; S: Ordinal](a: S): T</a></li>
+    title="safeConvert[T: SomeInteger; S: Ordinal](value: S): T">safeConvert[T: SomeInteger; S: Ordinal](value: S): T</a></li>
 
   </ul>
 
@@ -298,9 +298,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L75"
+href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L76"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L76" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -317,10 +317,10 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="safeConvert.t,S" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#safeConvert.t%2CS"><span class="Identifier">safeConvert</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">SomeInteger</span><span class="Other">;</span> <span class="Identifier">S</span><span class="Other">:</span> <span class="Identifier">Ordinal</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <span class="Identifier">S</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
+<dt><pre><span class="Keyword">template</span> <a href="#safeConvert.t%2CS"><span class="Identifier">safeConvert</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">SomeInteger</span><span class="Other">;</span> <span class="Identifier">S</span><span class="Other">:</span> <span class="Identifier">Ordinal</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">S</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
 <dd>
 
-
+Converts <tt class="docutils literal"><span class="pre"><span class="Identifier">value</span></span></tt> from S to <tt class="docutils literal"><span class="pre"><span class="Identifier">T</span></span></tt> iff <tt class="docutils literal"><span class="pre"><span class="Identifier">value</span></span></tt> is guaranteed to be preserved.
 &nbsp;&nbsp;<a
 href="https://github.com/status-im/nim-libp2p/tree/lesswarnings2/libp2p/utility.nim#L69"
 class="link-seesrc" target="_blank">Source</a>
@@ -338,7 +338,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-05 11:39:57 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-05 13:03:53 UTC</small>
       </div>
     </div>
   </div>
