--- a/hp-fixes/libp2p/utility.html
+++ b/hp-fixes/libp2p/utility.html
@@ -217,9 +217,19 @@ window.addEventListener("DOMContentLoaded", main2);
     title="compilesOr(a, b: untyped): untyped">compilesOr(a, b: untyped): untyped</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">exceptionToAssert
+      <li><a class="reference" href="#exceptionToAssert.t%2Cuntyped"
+    title="exceptionToAssert(body: untyped): untyped">exceptionToAssert(body: untyped): untyped</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">public
       <li><a class="reference" href="#public.t"
     title="public()">public()</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">safeConvert
+      <li><a class="reference" href="#safeConvert.t%2CS"
+    title="safeConvert[T: SomeInteger; S: Ordinal](value: S): T">safeConvert[T: SomeInteger; S: Ordinal](value: S): T</a></li>
 
   </ul>
 
@@ -282,6 +292,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="exceptionToAssert.t,untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#exceptionToAssert.t%2Cuntyped"><span class="Identifier">exceptionToAssert</span></a><span class="Other">(</span><span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/hp-fixes/libp2p/utility.nim#L76"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L76" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="public.t" class="tohide">
 <dt><pre><span class="Keyword">template</span> <a href="#public.t"><span class="Identifier">public</span></a><span class="Other">(</span><span class="Other">)</span> {.<span class="Identifier">pragma</span>.}</pre></dt>
 <dd>
@@ -291,6 +313,18 @@ class="link-seesrc" target="_blank">Source</a>
 href="https://github.com/status-im/nim-libp2p/tree/hp-fixes/libp2p/utility.nim#L17"
 class="link-seesrc" target="_blank">Source</a>
 &nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L17" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="safeConvert.t,S" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#safeConvert.t%2CS"><span class="Identifier">safeConvert</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">SomeInteger</span><span class="Other">;</span> <span class="Identifier">S</span><span class="Other">:</span> <span class="Identifier">Ordinal</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">S</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
+<dd>
+
+Converts <tt class="docutils literal"><span class="pre"><span class="Identifier">value</span></span></tt> from S to <tt class="docutils literal"><span class="pre"><span class="Identifier">T</span></span></tt> iff <tt class="docutils literal"><span class="pre"><span class="Identifier">value</span></span></tt> is guaranteed to be preserved.
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/hp-fixes/libp2p/utility.nim#L69"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L69" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -304,7 +338,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-17 17:18:20 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-18 11:36:56 UTC</small>
       </div>
     </div>
   </div>
