--- a/bumpdeps2/libp2p/switch.html
+++ b/bumpdeps2/libp2p/switch.html
@@ -299,6 +299,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="start(s: Switch): Future[void]">start(s: Switch): Future[void]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">stop
+      <li><a class="reference" href="#stop%2CSwitch"
+    title="stop(s: Switch): Future[void]">stop(s: Switch): Future[void]</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -601,6 +606,20 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="stop,Switch" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#stop%2CSwitch"><span class="Identifier">stop</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <a href="transports/transport.html#Switch"><span class="Identifier">Switch</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">public</span><span class="Other">(</span><span class="Other">)</span><span class="Other">,</span> <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
+                                     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+                                     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+Stop listening on every transport, and close every active connections
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/bumpdeps2/libp2p/switch.nim#L290"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/switch.nim#L290" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 
 </dl></div>
 <div class="section" id="14">
@@ -732,7 +751,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-23 12:49:53 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-30 09:42:27 UTC</small>
       </div>
     </div>
   </div>
