--- a/goodbyeget/libp2p/utility.html
+++ b/goodbyeget/libp2p/utility.html
@@ -232,9 +232,19 @@ window.addEventListener("DOMContentLoaded", main2);
     title="safeConvert[T: SomeInteger; S: Ordinal](value: S): T">safeConvert[T: SomeInteger; S: Ordinal](value: S): T</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">toOpt
+      <li><a class="reference" href="#toOpt.t%2CResult%5BT%2CE%5D"
+    title="toOpt[T, E](self: Result[T, E]): Opt[T]">toOpt[T, E](self: Result[T, E]): Opt[T]</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">valueOr
+      <li><a class="reference" href="#valueOr.t%2COption%5BT%5D%2Cuntyped"
+    title="valueOr[T](self: Option[T]; body: untyped): untyped">valueOr[T](self: Option[T]; body: untyped): untyped</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">withValue
-      <li><a class="reference" href="#withValue.t%2COpt%5BT%5D%2C%2C"
-    title="withValue[T](self: Opt[T]; value, body): untyped">withValue[T](self: Opt[T]; value, body): untyped</a></li>
+      <li><a class="reference" href="#withValue.t%2C%2Cuntyped%2Cuntyped"
+    title="withValue[T](self: Opt[T] | Option[T]; value, body: untyped): untyped">withValue[T](self: Opt[T] | Option[T]; value, body: untyped): untyped</a></li>
 
   </ul>
 
@@ -262,9 +272,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L28"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L31"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L31" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -274,9 +284,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L40"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L43"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L43" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -291,9 +301,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L22"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L25"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L25" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -315,9 +325,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L17"
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L20"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L17" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L20" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -333,8 +343,32 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
-<div id="withValue.t,Opt[T],," class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#withValue.t%2COpt%5BT%5D%2C%2C"><span class="Identifier">withValue</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">,</span> <span class="Identifier">body</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<div id="toOpt.t,Result[T,E]" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#toOpt.t%2CResult%5BT%2CE%5D"><span class="Identifier">toOpt</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">,</span> <span class="Identifier">E</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">,</span> <span class="Identifier">E</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L101"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L101" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="valueOr.t,Option[T],untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#valueOr.t%2COption%5BT%5D%2Cuntyped"><span class="Identifier">valueOr</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/goodbyeget/libp2p/utility.nim#L95"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L95" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="withValue.t,,untyped,untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#withValue.t%2C%2Cuntyped%2Cuntyped"><span class="Identifier">withValue</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span> <span class="Operator">|</span> <span class="Identifier">Option</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">,</span> <span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
 <dd>
 
 
@@ -355,7 +389,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-01 16:15:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-02 09:53:48 UTC</small>
       </div>
     </div>
   </div>
