--- a/add-rendezvous-metrics/libp2p/utility.html
+++ b/add-rendezvous-metrics/libp2p/utility.html
@@ -212,9 +212,24 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">public
+      <ul class="simple nested-toc-section">compilesOr
+      <li><a class="reference" href="#compilesOr.t%2Cuntyped%2Cuntyped"
+    title="compilesOr(a, b: untyped): untyped">compilesOr(a, b: untyped): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">exceptionToAssert
+      <li><a class="reference" href="#exceptionToAssert.t%2Cuntyped"
+    title="exceptionToAssert(body: untyped): untyped">exceptionToAssert(body: untyped): untyped</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">public
       <li><a class="reference" href="#public.t"
     title="public()">public()</a></li>
+
+  </ul>
+  <ul class="simple nested-toc-section">safeConvert
+      <li><a class="reference" href="#safeConvert.t%2CS"
+    title="safeConvert[T: SomeInteger; S: Ordinal](value: S): T">safeConvert[T: SomeInteger; S: Ordinal](value: S): T</a></li>
 
   </ul>
 
@@ -242,9 +257,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-rendezvous-metrics/libp2p/utility.nim#L22"
+href="https://github.com/status-im/nim-libp2p/tree/add-rendezvous-metrics/libp2p/utility.nim#L28"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -254,9 +269,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-rendezvous-metrics/libp2p/utility.nim#L34"
+href="https://github.com/status-im/nim-libp2p/tree/add-rendezvous-metrics/libp2p/utility.nim#L40"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L34" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -265,6 +280,30 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="18">
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
+<div id="compilesOr.t,untyped,untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#compilesOr.t%2Cuntyped%2Cuntyped"><span class="Identifier">compilesOr</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">,</span> <span class="Identifier">b</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/add-rendezvous-metrics/libp2p/utility.nim#L22"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="exceptionToAssert.t,untyped" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#exceptionToAssert.t%2Cuntyped"><span class="Identifier">exceptionToAssert</span></a><span class="Other">(</span><span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/add-rendezvous-metrics/libp2p/utility.nim#L76"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L76" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="public.t" class="tohide">
 <dt><pre><span class="Keyword">template</span> <a href="#public.t"><span class="Identifier">public</span></a><span class="Other">(</span><span class="Other">)</span> {.<span class="Identifier">pragma</span>.}</pre></dt>
 <dd>
@@ -274,6 +313,18 @@ class="link-seesrc" target="_blank">Source</a>
 href="https://github.com/status-im/nim-libp2p/tree/add-rendezvous-metrics/libp2p/utility.nim#L17"
 class="link-seesrc" target="_blank">Source</a>
 &nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L17" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="safeConvert.t,S" class="tohide">
+<dt><pre><span class="Keyword">template</span> <a href="#safeConvert.t%2CS"><span class="Identifier">safeConvert</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">SomeInteger</span><span class="Other">;</span> <span class="Identifier">S</span><span class="Other">:</span> <span class="Identifier">Ordinal</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">S</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
+<dd>
+
+Converts <tt class="docutils literal"><span class="pre"><span class="Identifier">value</span></span></tt> from S to <tt class="docutils literal"><span class="pre"><span class="Identifier">T</span></span></tt> iff <tt class="docutils literal"><span class="pre"><span class="Identifier">value</span></span></tt> is guaranteed to be preserved.
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/add-rendezvous-metrics/libp2p/utility.nim#L69"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utility.nim#L69" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -287,7 +338,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-02 13:05:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-02 13:58:32 UTC</small>
       </div>
     </div>
   </div>
